# del-node_modules

./: .gitignore  AGENTS.md  BUILD_WINDOWS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RUST_README.md  USAGE_MODES.md  benchmark-real.sh  benchmark.ps1  build-windows.ps1  index.js  package-lock.json  package.json  pnpm-lock.yaml  test.js
.github/workflows/: build-windows.yml  ci-cd.yml  pages.yml
docs/: README.md  _sidebar.md  changelog.md  contributing.md  faq.md  i18n.md  index.html  install.md  interactive.md  logging.md  options.md  quickstart.md  safe-mode.md
docs/zh-CN/: README.md  _sidebar.md  changelog.md  contributing.md  faq.md  i18n.md  install.md  interactive.md  logging.md  options.md  quickstart.md  safe-mode.md
js/: cli.js  wrapper.js
lib/: i18n.js  logger.js
src/: cli.rs  deleter.rs  elevate.rs  i18n.rs  interactive.rs  lib.rs  logger.rs  main.rs  scanner.rs  tests.rs  utils.rs
