[package]
name = "dnm"
version = "1.0.0"
description = "Delete Node Modules - Recursively delete all node_modules directories under a specified path"
authors = []
license = "MIT"
repository = "https://github.com/yourusername/dnm.git"
keywords = ["node_modules", "delete", "cleanup", "recursive", "dnm"]
edition = "2021"

[[bin]]
name = "dnm"
path = "src/main.rs"

[lib]
name = "dnm"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
